fix footer alignment

--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -44,7 +44,7 @@
   max-width: 1400px;
 }
 
-.info-footer-content > .d-flex > * {
+.info-footer-content > * {
   flex: 1;
   min-width: 300px;
   margin-right: $sp-3;
